# gz-evo

./: .Dockerfile  .gitignore  LICENSE  README.md  download_wds_from_huggingface.py  encoder_to_hub.py  pyproject.toml  requirements.txt  setup.py
baseline/: baseline_configs.py  baseline_datamodules.py  baseline_models.py  baseline_training.py  classification_baseline.py  classification_metrics.ipynb  encoder_to_hub.py  metrics.ipynb  metrics.py  minimal_baseline.py  regression_baseline.py
deprecated/: download_hf_dataset_from_hub.py  zoobot_supervised_multinomial_baseline.py
download/: download_hf_dataset_from_hub.py  download_timm_model.py  download_wds_from_hub.py
gz_evo/core/: baseline_configs.py  baseline_datamodules.py  baseline_models.py  baseline_training.py  encoder_to_hub.py  minimal_baseline.py  temp.py
gz_evo/core/classification/: classification_baseline.py  classification_eval.py  classification_metrics.ipynb  test.py  train.py
gz_evo/core/multinomial/: metrics.ipynb  metrics.py  regression_baseline.py  test.py  train.py
gz_evo/core/slurm_examples/: cuda_debug.py  galahad.sh  galahad_gres_test.sh
gz_evo/downstream/: finetune.py  finetune_utils.py  temp.py  transforms.py
gz_evo/downstream/conf/: config.yaml
gz_evo/downstream/conf/hardware/: cluster.yaml  galahad.yaml  local.yaml
gz_evo/downstream/conf/learner/: convnext_base.yaml  convnext_nano.yaml  convnext_nano_gz_euclid.yaml  convnext_pico.yaml  resnet50.yaml  (+9 more)
gz_evo/downstream/slurm_examples/: finetune_all_galahad.sh
slurm_examples/: beluga.sh  galahad.sh  narval.sh  requirements.txt
